--- a/index.html
+++ b/index.html
@@ -55,26 +55,28 @@
           </p>
         </li>
       </ul>
+
       <h2>Our Team</h2>
       <ul>
         <li>
           <img
-            src="img.jpg/man-with-laptop-presenting-something.png"
-            alt="img 1"
+            src="./img.jpg/man-with-laptop-presenting-something.png"
+            alt="Mark Guerrero"
             width="264"
           />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="img-2.png" alt="img 2" width="264" />
+          <h3>Tom Ford</h3>
+          <img src="./img.jpg/img-2.png" alt="" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
           <img
-            src="young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.png"
-            alt="img 3"
+            src="./img.jpg/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.png"
+            alt="Camila Garcia"
             width="264"
           />
           <h3>Camila Garcia</h3>
@@ -82,8 +84,8 @@
         </li>
         <li>
           <img
-            src="confident-handsome-guy-posing-against-white-wall.png"
-            alt="img 4"
+            src="./img.jpg/confident-handsome-guy-posing-against-white-wall.png"
+            alt="Daniel Wilson"
             width="264"
           />
           <h3>Daniel Wilson</h3>
