add markup main

--- a/index.html
+++ b/index.html
@@ -59,23 +59,18 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img
-            src="./img.jpg/man-with-laptop-presenting-something.png"
-            alt="Mark Guerrero"
-            width="264"
-          />
+          <img src="./images/source/img.png" alt="Mark Guerrero" width="264" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <h3>Tom Ford</h3>
-          <img src="./img.jpg/img-2.png" alt="" width="264" />
+          <img src="./images/source/img (1).png" alt="Tom Ford" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
           <img
-            src="./img.jpg/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.png"
+            src="./images/source/img (2).png"
             alt="Camila Garcia"
             width="264"
           />
@@ -84,7 +79,7 @@
         </li>
         <li>
           <img
-            src="./img.jpg/confident-handsome-guy-posing-against-white-wall.png"
+            src="./images/source/img (3).png"
             alt="Daniel Wilson"
             width="264"
           />
