--- a/index.html
+++ b/index.html
@@ -64,25 +64,17 @@
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/source/img(1).png" alt="Tom Ford" width="264" />
+          <img src="./images/source/img1.png" alt="Tom Ford" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img
-            src="./images/source/img(2).png"
-            alt="Camila Garcia"
-            width="264"
-          />
+          <img src="./images/source/img2.png" alt="Camila Garcia" width="264" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img
-            src="./images/source/img(3).png"
-            alt="Daniel Wilson"
-            width="264"
-          />
+          <img src="./images/source/img3.png" alt="Daniel Wilson" width="264" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
