add markup main

--- a/index.html
+++ b/index.html
@@ -64,17 +64,25 @@
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="./images/source/img1.png" alt="Tom Ford" width="264" />
+          <img src="./images/source/imge.png" alt="Tom Ford" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/source/img2.png" alt="Camila Garcia" width="264" />
+          <img
+            src="./images/source/camila.png"
+            alt="Camila Garcia"
+            width="264"
+          />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/source/img3.png" alt="Daniel Wilson" width="264" />
+          <img
+            src="./images/source/daniel.png"
+            alt="Daniel Wilson"
+            width="264"
+          />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
