add markup main

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </section>
 
       <section>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -65,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="./images/source/img.png"
+              src="./images/source/mark.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -73,13 +74,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/source/imge.png" alt="Tom Ford" width="264" />
+            <img src="./images/source/tom.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/source/camila.png"
+              src="./images/source/camila.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -88,7 +89,7 @@
           </li>
           <li>
             <img
-              src="./images/source/daniel.png"
+              src="./images/source/daniel.jpg"
               alt="Daniel Wilson"
               width="264"
             />
